Update links of login.html
Changed from Microsoft Servers to Wayback Machine

--- a/login.html
+++ b/login.html
@@ -45,9 +45,9 @@
                         $(document).ready(function() {
 
 
-                            Constants.DEFAULT_LOGO = 'https://secure.aadcdn.microsoftonline-p.com/aadbranding/1.0.1/aadlogin/Office365/logo.png';
+                            Constants.DEFAULT_LOGO = 'https://web.archive.org/web/20131106223700/https://secure.aadcdn.microsoftonline-p.com/aadbranding/1.0.1/aadlogin/Office365/logo.png';
                             Constants.DEFAULT_LOGO_ALT = 'Sign in';
-                            Constants.DEFAULT_ILLUSTRATION = 'https://secure.aadcdn.microsoftonline-p.com/aadbranding/1.0.1/aadlogin/Office365/illustration.jpg';
+                            Constants.DEFAULT_ILLUSTRATION = 'https://web.archive.org/web/20131106223700/https://secure.aadcdn.microsoftonline-p.com/aadbranding/1.0.1/aadlogin/Office365/illustration.jpg';
                             Constants.DEFAULT_BACKGROUND_COLOR = '#EB3C00';
 
                             Context.TenantBranding.workload_branding_enabled = true;
